# GBP-Genetic

./: CMakeLists.txt  main.cpp
Objects/: Algorithm.cpp  Algorithm.h  Fitness.cpp  Fitness.h  Gladiator.cpp  Gladiator.h  Population.cpp  Population.h
Serializador/: SerialPort.cpp  SerialPort.h
Structures/: LinkedList.h
